<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title"
        app:srcCompat="@drawable/harvestvalley" />

    <ImageButton
        android:id="@+id/objectives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="43dp"
        android:layout_marginStart="65dp"
        android:layout_toEndOf="@+id/newButton"
        android:background="@android:color/transparent"
        android:contentDescription="@string/objectives"
        app:srcCompat="@drawable/objective" />

    <ImageButton
        android:id="@+id/musicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/objectives"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/objectives"
        android:background="@android:color/transparent"
        android:contentDescription="@string/music"
        app:srcCompat="@drawable/music" />

    <ImageButton
        android:id="@+id/newButton"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/loadButton"
        android:layout_marginStart="53dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/newbutton"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/newbutton" />

    <ImageButton
        android:id="@+id/loadButton"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_above="@+id/objectives"
        android:layout_marginBottom="123dp"
        android:layout_marginStart="57dp"
        android:layout_toEndOf="@+id/newButton"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/loadbutton"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/loadbutton" />

</RelativeLayout>
